Update 'backend-tests-go-fvctdxtj' component image to: quay.io/rhtap_qe/backend-tests-go-fvctdxtj:819e7c6da76a17016e8d8c7797dbfe10a9cf96b9@sha256:a613590b610566e16bc6a88e6987aa27938e4b82b60e66e68943305dd83becc5

--- a/components/backend-tests-go-fvctdxtj/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-fvctdxtj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-fvctdxtj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-fvctdxtj:819e7c6da76a17016e8d8c7797dbfe10a9cf96b9@sha256:a613590b610566e16bc6a88e6987aa27938e4b82b60e66e68943305dd83becc5
+          name: container-image
